fixed scrollable dropdowns, fixed line spacing of english entry, fixed placeholders in noun sections, fixed the vialis ending error

--- a/src/style.css
+++ b/src/style.css
@@ -27,5 +27,8 @@ div#root {
   line-height: 1.5em;
 }
 
+.ui.inline.dropdown>.text {
+  line-height:2em;
+}
 /*.ui.dropdown 
 { font-size: 16.5px; } */
